--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <div  class="navbar-brand">
-                            <a id="menu-toggle" href="#" class="glyphicon glyphicon-align-justify btn-menu toggle">
+                            <a id="menu-toggle" href="#" class="btn-menu toggle">
                                 <i class="fa fa-bars"></i>
                             </a>
                             <a href="#">Project name</a>
@@ -48,14 +48,14 @@
                             <a href="#home"><span class="fa fa-home solo">Home</span></a>
                         </li>
                         <li>
-                            <a href="#anch1">
-                                <span class="fa fa-anchor solo">Anchor 1</span>
+                            <a data-toggle="collapse" href="#firstLink">
+                                <span class="fa fa-anchor solo">Anchor 3</span> <span class="fa fa-caret-down"></span>
                             </a>
-                        </li>
-                        <li>
-                            <a href="#anch2">
-                                <span class="fa fa-anchor solo">Anchor 2</span>
-                            </a>
+                            <ul id="firstLink" class="collapse">
+                                <li>SubTest1</li>
+                                <li>SubTest1</li>
+                                <li>SubTest1</li>
+                            </ul>
                         </li>
                         <li>
                             <a href="#anch3">
