--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="nav-side-menu">
-            <div class="brand">Brand Logo</div>
+            <div class="brand">Open Clieng</div>
             <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
             <div class="menu-list">
                 <ul id="menu-content" class="menu-content collapse out">
