--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -100,15 +100,6 @@
 }
 
 
-body {
-  margin: 0px;
-  padding: 0px;
-}
-
-
-
-
-
 #wrapper {
   padding-left: 250px;
   transition: all 0.4s ease 0s;
@@ -135,8 +126,8 @@ body {
 }
 
 #page-content-wrapper {
+  padding: 50px 3% 0;
   width: 100%;
-  padding-top: 70px;
   transition: all 0.4s ease 0s;
 }
 
