--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Index{% endblock %}
+
 {% block content %}
 <div class="row">
     <div class="col-md-6">
